fix(docs-infra): align property names to the top (#28104)
This looks better when the property descriptions span multiple lines;
especially when scrolling to a specific property (e.g.
[AbstractControl#status][1]).

[1]: https://next.angular.io/api/forms/AbstractControl#status

PR Close #28104

--- a/aio/src/styles/2-modules/_api-pages.scss
+++ b/aio/src/styles/2-modules/_api-pages.scss
@@ -74,6 +74,12 @@
           vertical-align: top;
         }
       }
+
+      &.property-table {
+        td {
+          vertical-align: top;
+        }
+      }
   }
 
   .class-overview {
